BUG 2393: Inherited permissions not showing share type on pane
QA: Re-test
* Note, the old datasets page was in error showing the 'delete' link next to inherited shares.
  You can only delete/modify shares for the view on which they were created.

--- a/app/styles/grid-sidebar-custom.sass
+++ b/app/styles/grid-sidebar-custom.sass
@@ -474,14 +474,24 @@
       .line
         margin-top: 1em
 
+        .readOnlyType
+          display: none
         &.inherited
           .selector
             display: none
           .name
             width: 16em
         &.inherited, &.noGrant
+          .name
+            width: 10em
+          .selector.uniform
+            display: none
           .removeShareLink
             visibility: hidden
+          .readOnlyType
+            display: inline
+            width: 8em
+            float: right
 
         .name
           @include clip-text
@@ -513,12 +523,6 @@
 
         select.type
           width: 10em
-        &.noGrant
-          span.type
-            width: 8em
-            float: right
-          .name
-            width: 10em
 
   #gridSidebar_guidedFilter
     label em
